add vscode config to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -179,6 +179,9 @@ Temporary Items
 .idea/**/gradle.xml
 .idea/**/libraries
 
+# Visual Code
+.vscode
+
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
