--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,5 +54,16 @@ services:
     environment:
       FLASK_ENV: production
 
+  soundchat-frontend:
+    build:
+      context: ./sound-chat-client
+      dockerfile: Dockerfile
+      args:
+        NODE_ENV: production
+    depends_on:
+      - soundchat-server
+    ports:
+      - "3000:8080"
+
 volumes:
   soundchat-mysql:
